--- a/client/src/app/pages/profile/profile.page.html
+++ b/client/src/app/pages/profile/profile.page.html
@@ -174,5 +174,5 @@
     </form>
   </section>
 
-  <p *ngIf="error" class="error mt12">{{ error }}</p>
+  <p *ngIf="error" class="error mt12" role="alert" aria-live="polite">{{ error }}</p>
 </main>
