--- a/client/src/app/pages/reset/reset.page.html
+++ b/client/src/app/pages/reset/reset.page.html
@@ -5,14 +5,30 @@
   <form (ngSubmit)="onSubmit()" class="form">
     <label>
       New password
-      <input
-        type="password"
-        name="newPassword"
-        [(ngModel)]="newPassword"
-        required
-        minlength="8"
-        class="input"
-      />
+      <div class="inputWithToggle">
+        <input
+          name="newPassword"
+          [(ngModel)]="newPassword"
+          required
+          minlength="8"
+          class="input"
+          [type]="showNewPassword ? 'text' : 'password'"
+        />
+        <button
+          type="button"
+          class="iconBtn"
+          (click)="showNewPassword = !showNewPassword"
+          [disabled]="busy"
+          [attr.aria-label]="showNewPassword ? 'Hide new password' : 'Show new password'"
+        >
+          <svg *ngIf="!showNewPassword" viewBox="0 0 24 24" class="icon" aria-hidden="true">
+            <path fill="currentColor" d="M12 5c6 0 10 7 10 7s-4 7-10 7S2 12 2 12s4-7 10-7Zm0 2C8 7 4.9 10.9 4.1 12c.8 1.1 3.9 5 7.9 5s7.1-3.9 7.9-5C19.1 10.9 16 7 12 7Zm0 2.5A2.5 2.5 0 1 1 9.5 12 2.5 2.5 0 0 1 12 9.5Z"/>
+          </svg>
+          <svg *ngIf="showNewPassword" viewBox="0 0 24 24" class="icon" aria-hidden="true">
+            <path fill="currentColor" d="M3 5.3 4.3 4 20 19.7 18.7 21l-3.1-3.1A11 11 0 0 1 12 19C6 19 2 12 2 12a20 20 0 0 1 5.1-5.9L3 5.3Zm9 3.7c-.3 0-.6 0-.9.1l1.3 1.3c.4.4.6.9.6 1.6 0 .3 0 .6-.1.9l1.8 1.8c.2-.4.3-.9.3-1.4A3 3 0 0 0 12 9Zm0-4c6 0 10 7 10 7a20 20 0 0 1-4.6 5.4l-1.4-1.4A18 18 0 0 0 19.9 12C19.1 10.9 16 7 12 7c-.7 0-1.3.1-1.9.2L8.5 5.6C9.6 5.2 10.8 5 12 5Z"/>
+          </svg>
+        </button>
+      </div>
     </label>
 
     <button type="submit" [disabled]="busy" class="submit">Update password</button>
